finally fixed comments overflowing

--- a/reddit-app/src/features/comments/comments.css
+++ b/reddit-app/src/features/comments/comments.css
@@ -7,6 +7,8 @@
 
 .comment p {
     margin: 10px 0;
+    word-break: break-all;
+    word-wrap: break-word;
 }
 .replies {
     grid-column: 2 / 3;
@@ -21,3 +23,4 @@
 .comment-reply {
     margin: 10px;
 }
+
